fixed overflow in HistoryCard.tsx

--- a/src/components/cards/HistoryCard/HistoryCard.module.pcss
+++ b/src/components/cards/HistoryCard/HistoryCard.module.pcss
@@ -1,5 +1,6 @@
-.tableContainer {
-    max-height: 430px;
+.container {
+    flex: 1;
+    overflow: hidden;
 }
 
 .modalPopoverContainer {
